--- a/app/src/main/res/layout/chat_user_more_info.xml
+++ b/app/src/main/res/layout/chat_user_more_info.xml
@@ -129,6 +129,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawSelectorOnTop="true"
+            android:layout_marginTop="32dp"
             android:text="@string/back_to_chat" />
 
     </LinearLayout>
