--- a/app/src/main/res/layout/broadcast_client.xml
+++ b/app/src/main/res/layout/broadcast_client.xml
@@ -31,46 +31,101 @@
             android:textAppearance="@android:style/TextAppearance.Large"
             android:textStyle="bold" />
 
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="horizontal" >
+
+                <TextView
+                    android:id="@+id/ttlTitle"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="@string/ttl"
+                    android:textAlignment="center"
+                    android:textAppearance="@android:style/TextAppearance.Small"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/timeoutTitle"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="@string/timeout"
+                    android:textAlignment="center"
+                    android:textAppearance="@android:style/TextAppearance.Small"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/serviceAmountTitle"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="@string/service_amount"
+                    android:textAlignment="center"
+                    android:textAppearance="@android:style/TextAppearance.Small"
+                    android:textStyle="bold" />
+
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="horizontal" >
+
+                <EditText
+                    android:id="@+id/ttl"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:inputType="number"
+                    android:maxLines="1"
+                    android:textAppearance="@android:style/TextAppearance.Medium"
+                    android:text="@string/_3"
+                    android:textAlignment="center" />
+
+                <EditText
+                    android:id="@+id/timeout"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:inputType="number"
+                    android:maxLines="1"
+                    android:textAppearance="@android:style/TextAppearance.Medium"
+                    android:text="@string/_2500"
+                    android:textAlignment="center" />
+
+                <EditText
+                    android:id="@+id/serviceAmount"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:inputType="number"
+                    android:maxLines="1"
+                    android:text="@string/_1"
+                    android:textAlignment="center"
+                    android:textAppearance="@android:style/TextAppearance.Medium" />
+
+            </TableRow>
+        </TableLayout>
+
+        <Button
+            android:id="@+id/discoverServices"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@string/find_services" />
+
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/discoverServices"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:drawSelectorOnTop="true"
-                android:text="@string/find_services" />
-
-            <EditText
-                android:id="@+id/ttl"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:inputType="number"
-                android:maxLines="1"
-                android:text="@string/_3" />
-
-            <EditText
-                android:id="@+id/timeout"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:inputType="number"
-                android:maxLines="1"
-                android:text="@string/_2500" />
-
-            <EditText
-                android:id="@+id/serviceAmount"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:inputType="number"
-                android:maxLines="1"
-                android:text="@string/_1" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:orientation="horizontal">
 
             <TextView
@@ -91,7 +146,8 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginTop="16dp" >
 
             <Button
                 android:id="@+id/getStreamList"
@@ -120,6 +176,7 @@
             android:text="@string/remote_streams"
             android:textAlignment="center"
             android:textAppearance="@android:style/TextAppearance.Small"
+            android:layout_marginTop="8dp"
             android:textStyle="bold" />
 
         <!--
@@ -167,7 +224,7 @@
             android:id="@+id/backToManager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="32dp"
             android:drawSelectorOnTop="true"
             android:text="@string/back_to_manager" />
 
