--- a/app/src/main/res/layout/opportunistic_networking_manager.xml
+++ b/app/src/main/res/layout/opportunistic_networking_manager.xml
@@ -64,8 +64,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="number"
-                android:text="@string/_600"
-                android:maxLines="1" />
+                android:maxLines="1"
+                android:text="@string/_30" />
 
             <TextView
                 android:id="@+id/sendPacketsPeriodUM"
