--- a/app/src/main/res/layout/ramp_manager.xml
+++ b/app/src/main/res/layout/ramp_manager.xml
@@ -115,5 +115,29 @@
             android:text=""
             android:textAppearance="@android:style/TextAppearance.Small" />
 
+        <EditText
+            android:id="@+id/ipBench"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/ip"
+            android:text="192.168.42.68"
+            android:inputType="text" />
+
+        <EditText
+            android:id="@+id/portBench"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="number"
+            android:hint="@string/port" />
+
+        <Button
+            android:id="@+id/sendMessageBench"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@string/send_message"
+            android:textAlignment="center" />
+
     </LinearLayout>
 </ScrollView>
