--- a/app/src/main/res/layout/ramp_manager.xml
+++ b/app/src/main/res/layout/ramp_manager.xml
@@ -116,12 +116,12 @@
             android:textAppearance="@android:style/TextAppearance.Small" />
 
         <EditText
-            android:id="@+id/ipBench"
+            android:id="@+id/idBench"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="@string/ip"
-            android:text="192.168.42.68"
+            android:hint="@string/id"
+            android:text="204300221"
             android:inputType="text" />
 
         <EditText
