--- a/app/src/main/res/layout/ramp_manager.xml
+++ b/app/src/main/res/layout/ramp_manager.xml
@@ -121,7 +121,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/id"
-            android:text="204300221"
+            android:text="277594165"
             android:inputType="text" />
 
         <EditText
@@ -129,6 +129,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
+            android:text="35634"
             android:inputType="number"
             android:hint="@string/port" />
 
